@@ -13,6 +13,7 @@
 # Describe libgalerautils library target
 include_HEADERS =      \
 	galerautils.h  \
+	gu_macros.h    \
 	gu_log.h       \
 	gu_assert.h    \
 	gu_mem.h       \
@@ -22,7 +23,10 @@ include_HEADERS =      \
 	gu_time.h      \
 	gu_fifo.h      \
 	gu_byteswap.h  \
-	gu_uuid.h
+	gu_uuid.h      \
+	galerautils.hpp\
+	gu_logger.hpp  \
+	gu_assert.hpp
 
 lib_LTLIBRARIES = libgalerautils.la
 
@@ -34,11 +38,22 @@ libgalerautils_la_SOURCES = \
 	gu_fifo.c  \
 	gu_uuid.c
 
-INTERFACE = 7
+INTERFACE = 8
 REVISION  = 0
-AGE       = 0
+AGE       = 1
 libgalerautils_la_LDFLAGS = \
 	-version-info $(INTERFACE):$(REVISION):$(AGE)
+
+lib_LTLIBRARIES += libgalerautils++.la
+
+libgalerautils___la_SOURCES = \
+	gu_logger.cpp
+
+INTERFACEPP = 1
+REVISIONPP  = 0
+AGEPP       = 0
+libgalerautils___la_LDFLAGS = \
+	-version-info $(INTERFACEPP):$(REVISIONPP):$(AGEPP)
 
 tags: TAGS
 
