@@ -1,4 +1,4 @@
-// Copyright (C) 2007-2009 Codership Oy <info@codership.com>
+// Copyright (C) 2009 Codership Oy <info@codership.com>
 
 /**
  * @file GaleraUtils main header file
@@ -6,20 +6,25 @@
  * $Id$
  */
 
-#ifndef _galerautils_h_
-#define _galerautils_h_
+#ifndef _galerautils_hpp_
+#define _galerautils_hpp_
 
+extern "C" {
 #include "gu_macros.h"
 #include "gu_limits.h"
 #include "gu_byteswap.h"
 #include "gu_time.h"
-#include "gu_log.h"
+//#include "gu_log.h"
 #include "gu_conf.h"
-#include "gu_assert.h"
+//#include "gu_assert.h"
 #include "gu_mem.h"
 #include "gu_mutex.h"
 #include "gu_dbug.h"
 #include "gu_fifo.h"
 #include "gu_uuid.h"
+}
 
-#endif /* _galerautils_h_ */
+#include "gu_logger.hpp"
+#include "gu_assert.hpp"
+
+#endif /* _galerautilspp_hpp_ */
